crates/toml/tests/snapshots/invalid/table/no-close-02.stderr
TOML parse error at line 1, column 26
  |
1 | [closing-bracket.missingö
  |                          ^
unclosed table, expected `]`

---
TOML parse error at line 1, column 25
  |
1 | [closing-bracket.missingö
  |                         ^
invalid unquoted key, expected letters, numbers, `-`, `_`

---
TOML parse error at line 1, column 25
  |
1 | [closing-bracket.missingö
  |                         ^
invalid unquoted key, expected letters, numbers, `-`, `_`
